[gd_scene load_steps=8 format=3 uid="uid://d3lhsfx1ajedo"]

[ext_resource type="Texture2D" uid="uid://cx8x63so3biqr" path="res://Assets/Misc/buttons/square.png" id="1_e88nf"]
[ext_resource type="Script" path="res://Scenes/ItemButton.gd" id="1_g11cd"]
[ext_resource type="Texture2D" uid="uid://bpi855df6qge8" path="res://Assets/Misc/buttons/square_pressed.png" id="2_pkcii"]
[ext_resource type="Texture2D" uid="uid://dwqnb6w4x5ag5" path="res://Assets/Misc/buttons/square_disabled.png" id="3_877ru"]
[ext_resource type="FontFile" uid="uid://0q3aq0atrryd" path="res://Assets/Fonts/Merienda-Regular.ttf" id="3_mqgtj"]
[ext_resource type="Texture2D" uid="uid://bv8itntmryovn" path="res://Assets/Characters/sprites/Girl.png" id="5_cqs3v"]
[ext_resource type="Texture2D" uid="uid://frj7q8pb7yal" path="res://Assets/Misc/arrow.png" id="6_4i3od"]

[node name="ItemButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 66.0
offset_bottom = 92.0
mouse_filter = 2
script = ExtResource("1_g11cd")

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.97
anchor_bottom = 0.621
offset_right = -24.02
offset_bottom = -23.963
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_e88nf")
texture_pressed = ExtResource("2_pkcii")
texture_disabled = ExtResource("3_877ru")

[node name="TextureRect" type="TextureRect" parent="TextureButton"]
texture_filter = 1
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 60.0
offset_bottom = 61.0
mouse_filter = 2
texture = ExtResource("5_cqs3v")
expand_mode = 1
stretch_mode = 5

[node name="InflationArrow" type="TextureRect" parent="TextureButton"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 41.0
offset_top = 24.0
offset_right = 62.0
offset_bottom = 44.0
rotation = -1.57079
texture = ExtResource("6_4i3od")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 63.0
offset_right = 127.0
offset_bottom = 143.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.337255, 0.231373, 1)
theme_override_fonts/normal_font = ExtResource("3_mqgtj")
theme_override_font_sizes/normal_font_size = 43
text = "$25"

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
